Ajout des fichiers de bases pour la variante tactique + Ajout d'une interface de départ (menu) + Changement de la taille du terminal